# HW19_2

./: .env.sample  .gitignore  catalog.json  groups.json  manage.py  pyproject.toml  readme.md
.run/: HW19_2.run.xml
HW19_2/: asgi.py  settings.py  urls.py  wsgi.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py
catalog/templates/: base.html  contact.html  home.html  product_detail.html  product_list.html
catalog/templates/catalog/: base.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/templates/users/: login.html  password_reset.html  password_reset_done.html  password_reset_email.html  user_form.html
